--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
+    "build": "nodemon src/server.ts --exec ts-node src/server.ts -e ts,graphql"
   },
   "author": "",
   "license": "ISC",
